# PA-autoDetection-Trading

./: .gitignore  AGENTS.md  README.md  pyproject.toml
alerts/: __init__.py  base.py  email.py  formatter.py  telegram.py
config/: __init__.py  settings.py
data/: __init__.py  kraken_rest.py  kraken_ws.py  models.py
features/: __init__.py  footprint.py  orderflow.py  response.py  structure.py  timeseries.py
scripts/: __init__.py  fetch_ohlc.py  fetch_trades.py  run_gui.py  run_monitor.py  run_web.py  stream_book.py  stream_trades.py
services/: monitor.py
signals/: composite.py  price_action.py
storage/: __init__.py  sqlite_store.py
tests/: test_data_models.py  test_features.py  test_footprint.py  test_settings.py  test_signals.py  test_storage.py  test_structure.py  test_timeseries.py  test_webapp.py
ui/: canvas_chart.py  charts.py  dashboard.py
webapp/: __init__.py  serializers.py  server.py
webapp/static/: app.js  index.html  styles.css
