[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-trading-assistant"
version = "0.1.0"
description = "Backend-only discretionary crypto trading assistant using Kraken public market data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.11,<4",
  "httpx>=0.28,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
packages = ["alerts", "config", "data", "features", "scripts", "signals", "storage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
