[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-trading-assistant"
version = "0.1.0"
description = "Discretionary crypto trading assistant with backend monitoring and a local GUI using Kraken public market data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.11,<4",
  "httpx>=0.28,<1",
  "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
packages = ["alerts", "config", "data", "features", "scripts", "services", "signals", "storage", "ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
